--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ body {
 .toProjects:hover {
     background: #e6554b;
 }
+img{
+    width:200px;
+    height: 200px;
+}
 
 section {
     padding: 4rem 2rem;
@@ -106,6 +110,16 @@ h2 {
     flex-wrap: wrap;
     justify-content: center;
 }
+
+.info{
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 1rem;
+display: block;
+width:auto;
+}
+
 
 .project {
     background: #fff;
